--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Prova vercel 2.0</title>
     <script type="module" crossorigin src="{{url_for('static', filename='index-2470e85d.js')}}"></script>
     <link rel="stylesheet" href="{{url_for('static', filename='index-f7934fb9.css')}}">
   </head>
